--- a/yaapp/templates/yabase/app/profile/profilePage.mustache
+++ b/yaapp/templates/yabase/app/profile/profilePage.mustache
@@ -2,11 +2,11 @@
 <div class='row'>
 
   <div class='span12' id='user-profile'>
-    <button class='yabutton-large right' id='all-my-radios'>{% trans 'All my radios' %}</button>
+    <button class='yabutton right' id='all-my-radios'>{% trans 'All my radios' %}</button>
     <h2>{% trans "My radios" %}</h2>
   </div>
 
-  <div class='span12'>
+  <div class='user-radios span12'>
     <h2>{% trans "My radios" %}</h2> 
     <ul class='radio-cells' id='profile-radios'>
       <li id='own-radio'>
@@ -15,14 +15,14 @@
   </div>
   
   <div class='span12' id='favorites-zone'>
-    <button class='yabutton-large right' id='favorites-btn'>{% trans 'All my favorites' %}</button>
+    <button class='yabutton right' id='favorites-btn'>{% trans 'All my favorites' %}</button>
     <h2>{% trans "My favorites" %}</h2>
     <ul class='radio-cells' id='favorites'>
     </ul>  
   </div>
 
   <div class='span12' id='friends-zone'>
-    <button class='yabutton-large right' id='friends-btn'>{% trans 'All my friends' %}</button>
+    <button class='yabutton right' id='friends-btn'>{% trans 'All my friends' %}</button>
     <h2>{% trans "My friends" %}</h2>
     <ul class='' id='friends'>
     </ul>  
