--- a/yaapp/templates/yabase/app/profile/user.mustache
+++ b/yaapp/templates/yabase/app/profile/user.mustache
@@ -1,7 +1,7 @@
 {% load i18n %}
 <div class='span12'>
    <div id='picture'>
-       <img src="<% picture %>" width="300px" height="300px"/>
+       <img src="<% picture %>" width="163px" height="163px"/>
    </div>
    <div id='recent-activity'>
     <%#history%>
@@ -11,8 +11,10 @@
     <%/history%>
    </div>
    <div id='infos'>
-     <h2><% name %></h2>
-     <p><% bio_text %></p>
+     <h2 id="user-name"><% name %></h2>
+		<button type="button" class="user-btn yabutton-large right">Message</button>
+		<button type="button" class="user-btn yabutton-large right">Suivre</button>
+     <p class="profile-bio"><% bio_text %></p>
    </div>
    
 </div>
