--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -251,19 +251,27 @@
 		                <div id="profile-picture">
 		                   {% if user_profile.picture %}
 		                       {% thumbnail user_profile.picture "28x28" format='PNG' as im %}
-		                        <a href='{% url webapp_profile request.user.username %}'><img src="{{ im.url  }}" width="28" height="28" alt="Profile Picture"></a>
+		                        <a href='{% url webapp_profile request.user.username %}'>
+							
+									<img src="{{ im.url  }}" width="28" height="28" alt="Profile Picture">
+								</a>
 		                       {% endthumbnail %}
 		                   {% else %}
-		                        <a href='{% url webapp_profile request.user.username %}'><img src="/media/images/default_image.png" width="28" height="28" alt="Profile Picture"></a>
+		                        <a href='{% url webapp_profile request.user.username %}' class="yatooltip">
+									<span class="yatoolelt">Hello world</span>
+									<img src="/media/images/default_image.png" width="28" height="28" alt="Profile Picture">
+								</a>
+								
 		                   {% endif %}
 		                </div>
 		                <div>
-		                    <a id="messages-btn" class="notification" href="{% url webapp_notifications %}">
+		                    <a id="messages-btn" class="notification yatooltip" href="{% url webapp_notifications %}">		
+								<span class="yatoolelt">Hello world</span>
 		                        <span class="badge badge-info {% ifequal notification_count 0 %}hidden{% endifequal %}" id="message-position-absolute">{{ notification_count }}</span>
 		                    </a>
 		                </div>
 		                <div class="notification" id="last-social-btn">
-		                    <a href="#" class="yatooltip" id="gift-btn"><span>{% trans 'No gifts' %}</span></a>
+		                    <a href="#" class="yatooltip" id="gift-btn"><span class="yatoolelt">{% trans 'No gifts' %}</span></a>
 		                </div>
 	                </div>
                 </div>
