--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -271,7 +271,7 @@
 		                    </a>
 		                </div>
 		                <div class="header-notification" id="last-social-btn">
-		                    <a href="#" class="yatooltip" id="gift-btn"><span>{% trans 'No gifts' %}</span></a>
+		                    <a href="#" class="yatooltip" id="gift-btn"><span class="yatoolelt">{% trans 'No gifts' %}</span></a>
 		                </div>
 	                </div>
                 </div>
