--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -251,8 +251,8 @@
 		                <div id="profile-picture">
 		                   {% if user_profile.picture %}
 		                       {% thumbnail user_profile.picture "28x28" format='PNG' as im %}
-		                        <a href='{% url webapp_profile request.user.username %}'>
-							
+		                        <a href='{% url webapp_profile request.user.username %}' class='yatooltip'>
+                                    <span class="yatoolelt">{% trans "Your profile" %}</span>
 									<img src="{{ im.url  }}" width="28" height="28" alt="Profile Picture">
 								</a>
 		                       {% endthumbnail %}
@@ -266,7 +266,7 @@
 		                </div>
 		                <div>
 		                    <a id="messages-btn" class="header-notification yatooltip" href="{% url webapp_notifications %}">
-								<span class="yatoolelt">Hello world</span>
+								<span class="yatoolelt">{% trans "Click for details" %}</span>
 		                        <span class="badge badge-info {% ifequal notification_count 0 %}hidden{% endifequal %}" id="message-position-absolute">{{ notification_count }}</span>
 		                    </a>
 		                </div>
