"my radios" page wip

--- a/yaapp/templates/yabase/app/common/subMenu.mustache
+++ b/yaapp/templates/yabase/app/common/subMenu.mustache
@@ -21,7 +21,7 @@
         <div id="sub-header-separation">
         </div>
             <a id="create-radio" href="#">
-                <span> Créer une radio </span>
+                <span>{% trans "Create radio" %}</span>
             </a>
         	<div id="search-bar">
 				<input type="text" id="search-input" class="unstyle" placeholder="Rechercher"/>
