--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -452,6 +452,10 @@ body {
     left:243px;
 }
 
+#sub-header-pointer.menu5 {
+    left:548px
+}
+
 #sub-header-nav {
     display:inline-block;
     float:left;
