--- a/yaapp/templates/yabase/app/radio/myRadiosPage.mustache
+++ b/yaapp/templates/yabase/app/radio/myRadiosPage.mustache
@@ -2,6 +2,8 @@
 <div id='post-submenu'>&nbsp;</div>
 <div class='row'>
     <div class='span12'>
-    <h1>hello, world</h1>
+    <ul id='results' class='radio-cells'>
+    <img class='loading-mask' src='/media/images/loading.gif'/>
+    </ul>
     </div>
 </div>
