--- a/yaapp/templates/yabase/app/common/subMenu.mustache
+++ b/yaapp/templates/yabase/app/common/subMenu.mustache
@@ -14,8 +14,10 @@
 				<div id="radio-style-symbol"><img src="/media/app/images/radio-style-symbol.png" width="6" height="9" alt="Radio Style Symbol">
 				</div>
                 <p id="form">
-                    {{ genre_form.genre }}
-                </p>
+					<span>
+                    	{{ genre_form.genre }}
+					</span>
+				</p>
             </form>
         </div>
         <div id="sub-header-separation">
