wip on radios page template

--- a/yaapp/templates/yabase/app/myRadios/myRadiosPage.mustache
+++ b/yaapp/templates/yabase/app/myRadios/myRadiosPage.mustache
@@ -2,7 +2,7 @@
 <div id='post-submenu'>&nbsp;</div>
 <div class='row'>
     <div class='span12'>
-    <ul id='results' class='radio-cells'>
+    <ul id='results' class='radio-with-stats-cells'>
     <img class='loading-mask' src='/media/images/loading.gif'/>
     </ul>
     </div>
