--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -200,7 +200,10 @@
    </script>
    
    <script type='text/html' id='myRadiosPageTemplate'>
-     {% include "yabase/app/radio/myRadiosPage.mustache" %}
+     {% include "yabase/app/myRadios/myRadiosPage.mustache" %}
+   </script>
+   <script type='text/html' id='radioWithStatsCellTemplate'>
+     {% include "yabase/app/myRadios/radioWithStatsCell.mustache" %}
    </script>
    
 {% endif %}
