--- a/yaapp/templates/yabase/app/myRadios/radioWithStatsCell.mustache
+++ b/yaapp/templates/yabase/app/myRadios/radioWithStatsCell.mustache
@@ -2,7 +2,10 @@
 <div class='radio-with-stats'>
     <div class='radio-cell-parent'>
     </div>
+    <div class="chartdiv" style="height:200px;width:300px;border:1px solid black; "></div>
     <div class='stats'>
     ici les stats
+    
+    
     </div>
 </div>
