--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -54,7 +54,9 @@
     <script type="text/javascript" src="/media/js/jquery.imgr.min.js"></script>
     <script type="text/javascript" src="/media/jquery-ui-1.8.21.custom/js/jquery-ui-1.8.21.custom.min.js"></script>
     <script type="text/javascript" src="/media/js/cookies.js"></script>
-    
+    <script type="text/javascript" type="text/javascript" src="/media/js/flot/jquery.flot.js"></script>
+    <script type="text/javascript" type="text/javascript" src="/media/js/flot/jquery.flot.selection.js"></script>
+        
 	<!--[if (gte IE 6)&(lte IE 8)]>
 	  <script type="text/javascript" src="/media/js/selectivizr-min.js"></script>
 	  <noscript><link rel="stylesheet" href="/media/css/ie.css" /></noscript>
