--- a/yaapp/templates/yabase/app/common/subMenu.mustache
+++ b/yaapp/templates/yabase/app/common/subMenu.mustache
@@ -12,12 +12,12 @@
         <div>
             <form>
 				<div id="radio-style-symbol"><img src="/media/app/images/radio-style-symbol.png" width="6" height="9" alt="Radio Style Symbol">
-				</div>
-                <p id="form">
-					<span>
-                    	{{ genre_form.genre }}
-					</span>
-				</p>
+				</div>      
+				<p id="form">
+					<div class="fix-ff">
+                    {{ genre_form.genre }}
+					</div>
+				</p>			
             </form>
         </div>
         <div id="sub-header-separation">
