updated stats, updated moment.js to 1.6.0

--- a/yaapp/templates/yabase/app/myRadios/radioWithStatsCell.mustache
+++ b/yaapp/templates/yabase/app/myRadios/radioWithStatsCell.mustache
@@ -2,7 +2,7 @@
 <div class='radio-with-stats'>
     <div class='radio-cell-parent'>
     </div>
-    <div class="chartdiv" style="height:200px;width:300px;border:1px solid black; "></div>
+    <div class="chartdiv" style="width: 450px; height: 200px; padding: 0px; position: relative;"></div>
     <div class='stats'>
     ici les stats
     
