--- a/yaapp/templates/yabase/app/common/subMenu.mustache
+++ b/yaapp/templates/yabase/app/common/subMenu.mustache
@@ -13,7 +13,7 @@
             <form>
 				<div id="radio-style-symbol"><img src="/media/app/images/radio-style-symbol.png" width="6" height="9" alt="Radio Style Symbol">
 				</div>      
-				<p id="form">
+				<p id="form" class="jqtransform">
 					<div class="fix-ff">
                     {{ genre_form.genre }}
 					</div>
