--- a/yaapp/templates/yabase/app/profile/profilePage.mustache
+++ b/yaapp/templates/yabase/app/profile/profilePage.mustache
@@ -1,29 +1,30 @@
 {% load i18n %}
-<div class='row'>
+<div class='row profile-background'>
 
   <div class='span12' id='user-profile'>
     <button class='yabutton right' id='all-my-radios'>{% trans 'All my radios' %}</button>
-    <h2>{% trans "My radios" %}</h2>
+    <h2 class='zone-title-margin'>{% trans "My radios" %}</h2>
   </div>
 
-  <div class='user-radios span12'>
-    <h2>{% trans "My radios" %}</h2> 
+  <div class='user-radios span12 no-margin'>
+    <button class='yabutton right' id='all-my-radios'>{% trans 'All my radios' %}</button>
+	<h2 class='zone-title-margin'>{% trans "My radios" %}</h2> 
     <ul class='radio-cells' id='profile-radios'>
       <li id='own-radio'>
       </li>        
     </ul>  
   </div>
   
-  <div class='span12' id='favorites-zone'>
+  <div class='span12 no-margin' id='favorites-zone'>
     <button class='yabutton right' id='favorites-btn'>{% trans 'All my favorites' %}</button>
-    <h2>{% trans "My favorites" %}</h2>
+    <h2 class='zone-title-margin'>{% trans "My favorites" %}</h2>
     <ul class='radio-cells' id='favorites'>
     </ul>  
   </div>
 
-  <div class='span12' id='friends-zone'>
+ <div class='span12 no-margin' id='friends-zone'>
     <button class='yabutton right' id='friends-btn'>{% trans 'All my friends' %}</button>
-    <h2>{% trans "My friends" %}</h2>
+    <h2 class='zone-title-margin'>{% trans "My friends" %}</h2>
     <ul class='' id='friends'>
     </ul>  
   </div>
