--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -963,6 +963,8 @@ input::-webkit-input-placeholder {
     height: 150px;
     z-index:100;
     width:100%;
+	height:149px;
+	margin-bottom:0px;
     background-color: black;
 }
 
@@ -971,7 +973,7 @@ input::-webkit-input-placeholder {
 }
 
 .blocks {
-    height: 100px;
+    height: 70px;
     font-family: arial, sans-serif;
     font-weight:;
 }
