--- a/yaapp/templates/yabase/app/favorites/favoritesPage.mustache
+++ b/yaapp/templates/yabase/app/favorites/favoritesPage.mustache
@@ -1,6 +1,6 @@
 {% load i18n %}
 <div id='post-submenu'>&nbsp;</div>
-<div class='span12'>
+<div class='span12 no-margin'>
     <ul id='results' class='radio-cells'>
     <img class='loading-mask' src='/media/images/loading.gif'/>
     </ul>
