--- a/yaapp/templates/yabase/app/myRadios/radioWithStatsCell.mustache
+++ b/yaapp/templates/yabase/app/myRadios/radioWithStatsCell.mustache
@@ -4,8 +4,13 @@
     </div>
     <div class="chartdiv" style="width: 450px; height: 200px; padding: 0px; position: relative;"></div>
     <div class='stats'>
-    ici les stats
-    
-    
+		<div class='minutes-spent'>
+	    	<em>2523</em>
+			<span>minutes de musique ont été écoutées</span>
+		</div>
+		<div class='new-messages'>
+			<em>903</em>
+		    <span>nouveaux messages</span>
+		</div>
     </div>
 </div>
