uniform plugin set up and running, modified friend profile image

--- a/yaapp/templates/yabase/app/userCell.mustache
+++ b/yaapp/templates/yabase/app/userCell.mustache
@@ -1,6 +1,6 @@
 {% load i18n %}
-<div class='user-cell-inner'>
-    <img src='<% picture %>' width='100px' height='100px'/>
+<div class='user-cell-inner mask-user'>
+    <img src='<% picture %>' width='150px' height='150px'/>
     <div class='caption'>
         <h5><% name %></h5>
     </div>
