--- a/yaapp/templates/yabase/app/radio/wallEvent.like.mustache
+++ b/yaapp/templates/yabase/app/radio/wallEvent.like.mustache
@@ -1,8 +1,10 @@
 {% load i18n %}
 <div class='wall-event-message alert alert-success'>
-<img src='/media/images/like.png'  width='32px' height='32px'/>
-<div class='date'><% formatted_start_date %></div>
-<h2><a href='/app/profile/<% user_username %>/'><% user_name %></a> {% trans "likes" %} <% song_name %></h2>
-<p><% text %></p>
-<div class='clear'></div>
+	<div class ='like-comment'>	
+		<img src='/media/images/like.png' width='32px' height='32px'/>
+		<h2><a href='/app/profile/<% user_username %>/'><% user_name %></a> {% trans "likes" %} <% song_name %></h2>
+	</div>
+	<p><% text %></p>
+	<div class='date'><% formatted_start_date %></div>
+	<div class='clear'></div>
 </div>
