--- a/yaapp/templates/yabase/app/userCell.mustache
+++ b/yaapp/templates/yabase/app/userCell.mustache
@@ -1,7 +1,7 @@
 {% load i18n %}
 <div class='user-cell-inner mask-user'>
-    <img src='<% picture %>' width='150px' height='150px'/>
-    <div class='caption'>
+    <img src='<% picture %>' width='100px' height='100px'/>
+    <div class='caption-user'>
         <h5><% name %></h5>
     </div>
 </div>
