--- a/yaapp/templates/yabase/app/radio/radioPage.mustache
+++ b/yaapp/templates/yabase/app/radio/radioPage.mustache
@@ -5,12 +5,12 @@
     <div class='well'>
     <ul id='webapp-radio-users' class='thumbnails'></ul>
     </div>
-    <div class='well'>
+    <!-- <div class='well'>
     <h2>{% trans "Similar radios" %}</h2>
-    <ul id='webapp-similar-radios' class='thumbnails'></ul>
-    </div>
+	<ul id='webapp-similar-radios' class='thumbnails'></ul> 
+    </div>-->
 </div>
-<div class='span8'>
+<div class='span8 wall-container'>
     <div id='webapp-wall-input'></div>
     <div>
     <ul id='wall'>
