update stats, updated user cells,

--- a/yaapp/templates/yabase/app/userCell.mustache
+++ b/yaapp/templates/yabase/app/userCell.mustache
@@ -1,7 +1,10 @@
 {% load i18n %}
-<div class='user-cell-inner mask-user'>
-    <img src='<% picture %>' width='100px' height='100px'/>
-    <div class='caption-user'>
+<div class='mask-user' style='display:none;'>
+	<div class='caption-user'>
         <h5><% name %></h5>
+		<span>23 ans, Femme Paris</span>
     </div>
+</div>
+<div class='user-cell-inner'>
+    <img src='<% picture %>' width='160px' height='160px'/>
 </div>
