--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -103,9 +103,11 @@ body {
     z-index: 0;
 }
 
+/*
 .switch-container input[type="checkbox"]:checked~.hd-bg {
     background-position:10px 50%;
 }
+*/
 
 .switch {
     display:inline-block;
@@ -1289,23 +1291,55 @@ input::-webkit-input-placeholder {
     border: 1px solid #c1c1c1;
 }
 
+.wall-event-message .date, .wall-event-message p {
+	color:#97989b;
+	text-shadow:1px 1px white;
+}
+
 
 /**
  * User cell
  */
 ul .user-cell {
     list-style: none;
-    height: 100px;
-    width: 100px;
+    height: 154px;
+    width: 154px;
     float: left;
-    margin-right: 16px;
+    margin-right: 20px;
     cursor: pointer;
     margin-bottom: 12px;
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
     border-radius: 50%;
-    border: 1px solid #c1c1c1;
-    overflow: hidden;
+    border: 8px solid white;
+	box-shadow: 0px 2px 8px #e6e6e6;
+    overflow: hidden;	
+}
+
+ul .mask-user {
+	position:absolute;
+	height:154px;
+	width:154px;
+	border-radius:50%;
+	background-color: rgba(0,0,0,0.8);
+	text-align:center;
+}
+
+ul .mask-user .caption-user {
+	display:block;
+	position:absolute;
+	top:34px;
+	left:25px;
+	height:85px;
+	width:105px;
+	color:#8c8d8e;
+	font-size:14px;
+	text-transform:lowercase;
+}
+
+.user-cell-inner {
+	height: 160px;
+    width: 160px;	
 }
 
 ul .user-cell .caption {
@@ -1408,7 +1442,7 @@ ul .user-cell:hover .caption {
 	margin-right:30px;
 }
 
-.like-comment {
+.special-comment {
 	margin:30px;
 	margin-bottom:0px;
 }
@@ -1420,6 +1454,7 @@ ul#notifications {
 
 .alert .date {
     float: right;
+
 }
 
 #notifications-toolbar,#programming-toolbar {
@@ -1696,6 +1731,18 @@ ul .radio-with-stats-cells li {
 .stats .new-messages span {
 	width:70px;
 	float:right;
+}
+
+.tickLabel {
+	color:#979797;
+	font-size:11px;
+	text-shadow:1px 1px white;
+	padding-right:20px;
+	margin-bottom:20px;
+}
+
+.base {
+	border-radius:10px;
 }
 
 /**
