--- a/yaapp/templates/yabase/app/userCell.mustache
+++ b/yaapp/templates/yabase/app/userCell.mustache
@@ -1,10 +1,12 @@
 {% load i18n %}
-<div class='mask-user' style='display:none;'>
-	<div class='caption-user'>
-        <h5><% name %></h5>
-		<span>23 ans, Femme Paris</span>
-    </div>
-</div>
 <div class='user-cell-inner'>
-    <img src='<% picture %>' width='160px' height='160px'/>
+	<div class='mask-user' style='display:none;'>
+		<div class='caption-user'>
+	        <h5><% name %></h5>
+			<span>23 ans, Femme Paris</span>
+	    </div>
+	</div>
+	<div>
+	    <img src='<% picture %>' width='160px' height='160px'/>
+	</div>
 </div>
