--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -919,8 +919,11 @@ input::-webkit-input-placeholder {
 
 /*--- BUTTON NEXT ---*/
 
-.pagination {
-    margin-left:408px;
+#pagination {
+	display:block;
+	min-width:150px;
+	float:left;
+	margin-left:43%;
 }
 
 
@@ -1213,16 +1216,27 @@ input::-webkit-input-placeholder {
  */
 #webapp-radio {
     margin-top: 24px;
-    background-color: #F5F5F5;
+/*    background-color: #F5F5F5;*/
     border-radius: 6px 6px 6px 6px;
     padding: 40px;
     padding-top: 60px;
     padding-bottom: 60px;
-    background-image: url(/media/images/icon-radio.png);
+/*    background-image: url(/media/images/icon-radio.png);*/
     background-repeat: no-repeat;
     background-position: 10px 10px;
     margin-bottom: 24px;
     min-height: 170px;
+	overflow:hidden;
+}
+
+#webapp-radio-title {
+	width:210px;
+	overflow:hidden;
+}
+
+#webapp-radio-title h1 a {
+	width:210px;
+	
 }
 
 #webapp-radio p {
@@ -1316,6 +1330,15 @@ ul .user-cell {
     overflow: hidden;	
 }
 
+ul .user-cell:hover {
+	border:8px solid #5aabda;
+	-webkit-transition: border 0.6s ease;
+    -moz-transition: border 0.6s ease;
+    -ms-transition: border 0.6s ease;
+    -o-transition: border 0.6s ease;
+    transition: border 0.6s ease;
+}
+
 ul .mask-user {
 	position:absolute;
 	height:154px;
@@ -1355,6 +1378,8 @@ ul .user-cell .caption {
     -o-transition: top 0.5s ease;
     transition: top 0.5s ease;
 }
+
+
 
 ul .user-cell .caption h5 {
     color: white;
@@ -1504,6 +1529,7 @@ ul#notifications .read {
 #user-profile #picture {
 	margin:15px 25px 0px 19px;
 	float:left;
+	border-radius:50%;
 }
 
 #user-profile #recent-activity {
@@ -1689,6 +1715,7 @@ ul .radio-with-stats-cells li {
 	margin-top:40px;
 	height:190px;
 	width:135px;
+	color:grey;
 }
 
 .stats-container {
