--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="/media/css/flashblock.css"/>
     <link rel="stylesheet" href="/media/css/auth-buttons.css"/>
     <link rel="stylesheet" href="/media/jquery-ui-1.8.21.custom/css/ui-lightness/jquery-ui-1.8.21.custom.css"/>
+	<link rel="stylesheet" href="/media/css/uniform.default.css/uniform.default.css" />
     
     
     <link rel="stylesheet" href="/media/js/colibri/colibri.css"/>
@@ -32,7 +33,8 @@
 
     <link rel="stylesheet" href="/media/css/webapp.css"/>
     
-    <script type="text/javascript" src='/media/js/jquery-1.7.1.min.js'></script>
+    <script src="media/js/jquery.uniform.js" type="text/javascript"></script>
+	<script type="text/javascript" src='/media/js/jquery-1.7.1.min.js'></script>
     <script type="text/javascript" src='/media/js/jquery.timers.js'></script>
     <script type="text/javascript" src='/media/js/moment.min.js'></script>
     <script type="text/javascript" src='/media/js/moment-lang-all.min.js'></script>
