fixed selection page bug (id was weird)

--- a/yaapp/templates/yabase/app/home/homePage.mustache
+++ b/yaapp/templates/yabase/app/home/homePage.mustache
@@ -2,7 +2,7 @@
 <div id='post-submenu'>&nbsp;</div>
 <div class='row'>
     <div class=''>
-        <ul id='selected-radios no-margin' class='radio-cells'>
+        <ul id='selected-radios' class='radio-cells no-margin'>
             <img class='loading-mask' src='/media/images/loading.gif'/>
         </ul>
     </div>
