--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -326,6 +326,7 @@ body {
 	text-decoration:none;
 }
 
+/*
 .notification {
     width:38px;
     height:38px;
@@ -334,6 +335,7 @@ body {
     display:inline-block;
     padding: 19px 0px 0px 25px;
 }
+*/
 
 #message-position-absolute {
     display:inline-block;
