--- a/yaapp/templates/yabase/app/myRadios/radioWithStatsCell.mustache
+++ b/yaapp/templates/yabase/app/myRadios/radioWithStatsCell.mustache
@@ -2,7 +2,6 @@
 <div class='radio-with-stats'>
     <div class='radio-cell-parent'>
     </div>
-    <div class="chartdiv" style="width: 450px; height: 200px; padding: 0px; position: relative;"></div>
     <div class='stats'>
 		<div class='minutes-spent'>
 	    	<em>2523</em>
@@ -12,5 +11,7 @@
 			<em>903</em>
 		    <span>nouveaux messages</span>
 		</div>
+    </div>
+    <div class="chartdiv" style="width: 450px; height: 200px; padding: 0px; position: relative;">
     </div>
 </div>
