--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -33,7 +33,7 @@
 
     <link rel="stylesheet" href="/media/css/webapp.css"/>
     
-    <script src="media/js/jquery.uniform.js" type="text/javascript"></script>
+    <script src="/media/js/jquery.uniform.js" type="text/javascript"></script>
 	<script type="text/javascript" src='/media/js/jquery-1.7.1.min.js'></script>
     <script type="text/javascript" src='/media/js/jquery.timers.js'></script>
     <script type="text/javascript" src='/media/js/moment.min.js'></script>
@@ -58,6 +58,7 @@
     <script type="text/javascript" src="/media/js/cookies.js"></script>
     <script type="text/javascript" type="text/javascript" src="/media/js/flot/jquery.flot.js"></script>
     <script type="text/javascript" type="text/javascript" src="/media/js/flot/jquery.flot.selection.js"></script>
+    <script language="javascript" type="text/javascript" src="/media/js/flot/jquery.flot.resize.js"></script>
         
 	<!--[if (gte IE 6)&(lte IE 8)]>
 	  <script type="text/javascript" src="/media/js/selectivizr-min.js"></script>
