--- a/yaapp/templates/yabase/app/common/subMenu.mustache
+++ b/yaapp/templates/yabase/app/common/subMenu.mustache
@@ -11,10 +11,9 @@
         </ul>
         <div>
             <form>
-				<div id="radio-style-symbol"><img src="/media/app/images/radio-style-symbol.png" width="6" height="9" alt="Radio Style Symbol">
-				</div>      
-				<p id="form" class="jqtransform">
-					<div class="fix-ff">
+                <div class="genre-selector"><img src="../../media/app/images/radio-style-symbol.png" alt="radio symbol"/></div>
+                <p id="form" class="jqtransform">
+					<div id="fix-genre">
                     {{ genre_form.genre }}
 					</div>
 				</p>			
