--- a/yaapp/templates/yabase/app/radio/wallEvent.like.mustache
+++ b/yaapp/templates/yabase/app/radio/wallEvent.like.mustache
@@ -5,6 +5,6 @@
 		<h2><a href='/app/profile/<% user_username %>/'><% user_name %></a> {% trans "likes" %} <% song_name %></h2>
 	</div>
 	<p><% text %></p>
-	<div class='date'><% formatted_start_date %></div>
+	<div class='date date-comment'><% formatted_start_date %></div>
 	<div class='clear'></div>
 </div>
