--- a/yaapp/templates/yabase/app/radio/wallEvent.song.mustache
+++ b/yaapp/templates/yabase/app/radio/wallEvent.song.mustache
@@ -1,8 +1,10 @@
 {% load i18n %}
 <div class='wall-event-message alert alert-info'>
-<img src='/media/images/default_album.jpg' width='32px' height='32px'/>
-<h2><% song_name %> <% song_album %> <% song_artist %></h2>
-<p><% text %></p>
-<div class='date'><% formatted_start_date %></div>
-<div class='clear'></div>
+    <div class="song-comment">
+        <img src='/media/images/default_album.jpg' width='32px' height='32px'/>
+        <h2><% song_name %> <% song_album %> <% song_artist %></h2>
+        <p><% text %></p>
+        <div class='date date-comment'><% formatted_start_date %></div>
+        <div class='clear'></div>
+    </div>
 </div>
