user cell updated
* gender is sent as human form instead of code
* fixed collection model for user cells (user instead of radio)
* json method overloaded in user model in order to add agc (age - gender - city string)

--- a/yaapp/templates/yabase/app/userCell.mustache
+++ b/yaapp/templates/yabase/app/userCell.mustache
@@ -3,7 +3,7 @@
 	<div class='mask-user' style='display:none;'>
 		<div class='caption-user'>
 	        <h5><% name %></h5>
-			<span>23 ans, Femme Paris</span>
+			<span><% agc %></span>
 	    </div>
 	</div>
 	<div>
