--- a/yaapp/templates/yabase/app/profile/profilePage.mustache
+++ b/yaapp/templates/yabase/app/profile/profilePage.mustache
@@ -2,16 +2,12 @@
 <div class='row profile-background'>
 
   <div class='span12' id='user-profile'>
-    <button class='yabutton right' id='all-my-radios'>{% trans 'All my radios' %}</button>
-    <h2 class='zone-title'>{% trans "My radios" %}</h2>
   </div>
 
   <div class='user-radios span12 no-margin'>
-    <button class='yabutton right' id='all-my-radios'>{% trans 'All my radios' %}</button>
+    <button class='yabutton right' id='radios-btn'>{% trans 'All my radios' %}</button>
 	<h2 class='zone-title'>{% trans "My radios" %}</h2> 
-    <ul class='radio-cells' id='profile-radios'>
-      <li id='own-radio'>
-      </li>        
+    <ul class='radio-cells' id='radios'>
     </ul>
   <div class='separation-line'></div>
   </div>
