--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -155,6 +155,9 @@
    <script type='text/html' id='userFriendsPageTemplate'>
      {% include "yabase/app/friends/userFriendsPage.mustache" %}
    </script>
+   <script type='text/html' id='userRadiosPageTemplate'>
+     {% include "yabase/app/radio/userRadiosPage.mustache" %}
+   </script>
 
 {% if request.user.is_authenticated %}
    <script type='text/html' id='favoritesPageTemplate'>
