--- a/yaapp/templates/yabase/app/userCell.mustache
+++ b/yaapp/templates/yabase/app/userCell.mustache
@@ -4,6 +4,7 @@
 		<div class='caption-user'>
 	        <h5><% name %></h5>
 			<span><% agc %></span>
+            <a class='delete-friend'><img alt="delete friend" src="/media/app/images/profile/delete-friend.png"></a>
 	    </div>
 	</div>
 	<div>
