--- a/yaapp/templates/yabase/app/profile/user.mustache
+++ b/yaapp/templates/yabase/app/profile/user.mustache
@@ -7,10 +7,19 @@
      <h2 id="user-name"><% name %></h2>
 	<a href='#' class='sd-hd-small'><img src="/media/app/images/profile/HD.png" width="24" height="13" alt="HD"></a>
 	<span class='validated'>
+        <%^owner%>
+        <%#is_friend%>
 		<img src="/media/app/images/profile/validated-profile.png" width="25" height="25" alt="Validated Profile">
+	    <%/is_friend%>
+        <%/owner%>
 	</span>
+    <%^owner%>
 	<button type="button" class="user-btn yabutton-large right">Message</button>
-	<button type="button" class="user-btn yabutton-large right">Suivre</button>
+	<button type="button" class="user-btn yabutton-large right">
+    	<%#is_friend%>{% trans "Unfollow" %}<%/is_friend%>
+        <%^is_friend%>{% trans "Follow" %}<%/is_friend%>
+	</button>
+    <%/owner%>
      <p class="profile-bio"><% bio_text %></p>
    </div>
 	<div class='separation-high'>
