--- a/yaapp/templates/yabase/app/profile/user.mustache
+++ b/yaapp/templates/yabase/app/profile/user.mustache
@@ -15,7 +15,7 @@
 	</span>
     <%^owner%>
 	<button type="button" class="user-btn yabutton-large right">Message</button>
-	<button type="button" class="user-btn yabutton-large right">
+	<button type="button" class="user-btn yabutton-large right" id='follow'>
     	<%#is_friend%>{% trans "Unfollow" %}<%/is_friend%>
         <%^is_friend%>{% trans "Follow" %}<%/is_friend%>
 	</button>
