--- a/yaapp/templates/yabase/app/common/subMenu.mustache
+++ b/yaapp/templates/yabase/app/common/subMenu.mustache
@@ -4,10 +4,22 @@
     <div class="container" id="sub-header-container">
 		<div id="sub-header-pointer" class='menu{{submenu_number}}'></div>
         <ul id="sub-header-nav">
-            <li class="first {% ifequal submenu_number 1 %}selected{% endifequal %}"><a href='#' id="selection">{% trans "Selection" %}</a></li>
-            <li class="{% ifequal submenu_number 2 %}selected{% endifequal %}"><a href='#' id='top'>{% trans "Top" %}</a></li>
-            <li class="{% ifequal submenu_number 3 %}selected{% endifequal %}"><a href='#' id='friends'>{% trans "My friends" %}</a></li>
-            <li class="{% ifequal submenu_number 4 %}selected{% endifequal %}"><a href='#' id='favorites'>{% trans "Favorites" %}</a></li>
+            <li class="first {% ifequal submenu_number 1 %}selected{% endifequal %}">
+                <a href='#' class='mobile-selection'></a>
+                <a href='#' id="selection">{% trans "Selection" %}</a>
+            </li>
+            <li class="{% ifequal submenu_number 2 %}selected{% endifequal %}">
+                <a href='#' class='mobile-top'></a>
+                <a href='#' id='top' >{% trans "Top" %}</a>
+            </li>
+            <li class="{% ifequal submenu_number 3 %}selected{% endifequal %}">
+                <a href='#' class='mobile-friends'></a>
+                <a href='#' id='friends'>{% trans "My friends" %}</a>
+            </li>
+            <li class="{% ifequal submenu_number 4 %}selected{% endifequal %}">
+                <a href='#' class='mobile-favorites'></a>
+                <a href='#' id='favorites'>{% trans "Favorites" %}</a>
+            </li>
         </ul>
         <div>
             <form>
