--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -316,6 +316,22 @@
         <a href="#" class="btn" data-dismiss="modal">{% trans "Close" %}</a>
     </div>
 </div>        
+
+<div class="modal hide fade" id="modal-unfollow">
+    <div class="modal-header">
+        <button class="close" data-dismiss="modal">×</button>
+        <h3>{% trans "Unfollow" %}</h3>
+    </div>
+    <div class="modal-body">
+        <p>{% trans "Do you really want to unfollow this user ?" %}
+        </p>
+    </div>
+    <div class="modal-footer">
+        <a href="#" class="btn" data-dismiss="modal">{% trans "No thank you" %}</a>
+        <a href="#" class="btn btn-primary">{% trans "Yes i want" %}</a>
+    </div>
+</div>        
+
     
 <div id='webapp-container'>{% block content%}{%endblock%}</div>
 
