improved anonymous mode for webapp
* added setting in order to disable anonymous mode on dev server (no htaccess on this platform)
* improved unauthorized zones

--- a/yaapp/templates/yabase/app/favorites/favoritesPage.mustache
+++ b/yaapp/templates/yabase/app/favorites/favoritesPage.mustache
@@ -1,8 +1,14 @@
 {% load i18n %}
 <div id='post-submenu'>&nbsp;</div>
+{% if request.user.is_authenticated %}
 <div class='span12 no-margin'>
     <ul id='results' class='radio-cells'>
     <img class='loading-mask' src='/media/images/loading.gif'/>
     </ul>
     <div class='cell-pagination' id='pagination'></div>
 </div>
+{% else %}
+<div class='span12 no-margin'>
+    <h2>Not authenticated</h2>
+</div>
+{% endif %}
