--- a/yaapp/templates/yabase/app/profile/user.mustache
+++ b/yaapp/templates/yabase/app/profile/user.mustache
@@ -30,10 +30,12 @@
    		<h2><% human_date %></h2>
 		<blockquote>&laquo; <% message %> &raquo;</blockquote>
 		<div class='artist-comment'>
-			Ecouter Jay-Z sur
+		    <%#radio_current_song%>
+			{% trans "Listen to" %} <% radio_current_song %> {% trans "on" %}
+            <%/radio_current_song%>
 			 <a id='radio-activity' href='/app/radio/<% radio_uuid %>/'><% radio_name %></a>
 			<div class='radio-picto'>
-				<img src="/media/app/images/radio-picto.png" width="32" height="32" alt="Radio Picto">
+				<img src="<% radio_picture %>" width="32" height="32" alt="Radio Picto">
 			</div>
 		</div>
         <%/history%>
