--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -1699,6 +1699,9 @@ ul#notifications .read {
 	right:0px;
 	top:1px;
 }
+.artist-comment .radio-picto img {
+   border-radius:4px;
+}
 
 .right {
 	float:right;
