added background & back button

--- a/yaapp/templates/yabase/app/profile/profilePage.mustache
+++ b/yaapp/templates/yabase/app/profile/profilePage.mustache
@@ -5,24 +5,24 @@
   </div>
 
   <div class='user-radios span12 no-margin'>
-    <button class='yabutton right' id='radios-btn'>{% trans 'All my radios' %}</button>
-	<h2 class='zone-title'>{% trans "My radios" %}</h2> 
+    <button class='yabutton right' id='radios-btn'>{% trans 'See all radios' %}</button>
+	<h2 class='zone-title'>{% trans "Radios" %}</h2> 
     <ul class='radio-cells' id='radios'>
     </ul>
   <div class='separation-line'></div>
   </div>
   
   <div class='span12 no-margin' id='favorites-zone'>
-    <button class='yabutton right' id='favorites-btn'>{% trans 'All my favorites' %}</button>
-    <h2 class='zone-title'>{% trans "My favorites" %}</h2>
+    <button class='yabutton right' id='favorites-btn'>{% trans 'See all favorites' %}</button>
+    <h2 class='zone-title'>{% trans "Favorites" %}</h2>
     <ul class='radio-cells' id='favorites'>
     </ul>
   <div class='separation-line'></div>
   </div>
 
  <div class='span12 no-margin' id='friends-zone'>
-    <button class='yabutton right' id='friends-btn'>{% trans 'All my friends' %}</button>
-    <h2 class='zone-title'>{% trans "My friends" %}</h2>
+    <button class='yabutton right' id='friends-btn'>{% trans 'See all friends' %}</button>
+    <h2 class='zone-title'>{% trans "Friends" %}</h2>
     <ul class='' id='friends'>
     </ul>
   </div>
