--- a/yaapp/templates/yabase/app/favorites/userFavoritesPage.mustache
+++ b/yaapp/templates/yabase/app/favorites/userFavoritesPage.mustache
@@ -1,5 +1,7 @@
 {% load i18n %}
-<div class='span12'>
+<div class='span12 profile-background'>
+    <button class='yabutton right' id='back-btn'>{% trans 'Back to profile' %}</button>
+    <h2 class='zone-title'>{% trans "Favorites" %}</h2> 
     <ul id='results' class='radio-cells'>
     <img class='loading-mask' src='/media/images/loading.gif'/>
     </ul>
